RESOLVED FIXED200769
Negative size box with border radius causes hang under WebCore::approximateAsRegion
https://bugs.webkit.org/show_bug.cgi?id=200769
Summary Negative size box with border radius causes hang under WebCore::approximateAs...
Antti Koivisto
Reported 2019-08-15 07:59:00 PDT
Need to check for empty boxes
Attachments
patch (3.96 KB, patch)
2019-08-15 08:16 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2019-08-15 08:00:14 PDT
Antti Koivisto
Comment 2 2019-08-15 08:16:14 PDT
WebKit Commit Bot
Comment 3 2019-08-15 10:20:28 PDT
Comment on attachment 376380 [details] patch Clearing flags on attachment: 376380 Committed r248722: <https://trac.webkit.org/changeset/248722>
WebKit Commit Bot
Comment 4 2019-08-15 10:20:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.